--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="shortcut icon" type="image/png" href="/image/favicon.png"/>
     <title>SonTung-MTP</title>
@@ -15,7 +15,7 @@
     <div id="header">
         <!--logo-->
         <div class="he-logo">
-            <img src="../image/logo_mtp.jpg" style="width: 35px">
+            <img src="image/logo_mtp.jpg" style="width: 35px">
         </div>
         <!--/logo-->
         <ul id="nav">
@@ -72,7 +72,7 @@
     <!--slider-->
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="../image/sky_tour.jpg" alt="hinh_anh_am_nhac">
+            <img src="image/sky_tour.jpg" alt="hinh_anh_am_nhac">
             <div class="slider-footer">
                 <p>Sky Tour is a musical documentary film by Vietnamese singer-songwriter Son Tung M-TP about the
                     2019 Sky Tour before the release of the album We.</p>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="mySlides fade">
-            <img src="../image/chung_ta_cua_hien_tai.jpg" alt="hinh_anh_am_nhac">
+            <img src="image/chung_ta_cua_hien_tai.jpg" alt="hinh_anh_am_nhac">
             <div class="slider-footer">
                 <p>This song is R&B mixed with a bit of nostalgic color of the 80s and 90s. The last tear is also
                     the image at the beginning of the film that people often call "tears flying to heaven" is a
@@ -98,7 +98,7 @@
         </div>
 
         <div class="mySlides fade">
-            <img src="../image/there_no_one_at_all.jpg" alt="hinh_anh_am_nhac">
+            <img src="image/there_no_one_at_all.jpg" alt="hinh_anh_am_nhac">
             <div class="slider-footer">
                 <p>There is no one at all is the first time that the Thai Binh-born singer has personally produced a
                     trap hip hop style, since his partner Onionn left the company.</p>
@@ -125,7 +125,7 @@
         <div class="content-section">
             <h2 class="section-heading">INFORMATION</h2>
             <div class="text-description">
-                <img src="../image/avata_mtp.jpg">
+                <img src="image/avata_mtp.jpg">
                 <p>Nguyen Thanh Tung was born on July 5, 1994 in Thai Binh, commonly known by his stage name Son Tung
                     M-TP. He is a Vietnamese singer, songwriter, rapper and actor. Tung became famous when he released
                     two singles "Con Mua Ngang Qua" and "Em cua ngay hom
@@ -143,7 +143,7 @@
             <h2 class="section-heading">POPULAR SONGS</h2>
             <div class="row member-list">
                 <div class="col col-third">
-                    <img src="../image/song_lac_troi.png" alt="popular_song" class="member-img">
+                    <img src="image/song_lac_troi.png" alt="popular_song" class="member-img">
                     <div class="member-content">
                         <h3 class="member-heading">Lac troi</h3>
                         <div class="member-time">Released of year: 2017</div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="col col-third">
-                    <img src="../image/song_co_chac_yeu_la_day.png" alt="popular_song" class="member-img">
+                    <img src="image/song_co_chac_yeu_la_day.png" alt="popular_song" class="member-img">
                     <div class="member-content">
                         <h3 class="member-heading">Co chac yeu la day</h3>
                         <div class="member-time">Released of year:2020</div>
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="col col-third">
-                    <img src="../image/song_haytraochoanh.png" alt="popular_song" class="member-img">
+                    <img src="image/song_haytraochoanh.png" alt="popular_song" class="member-img">
                     <div class="member-content">
                         <h3 class="member-heading">Hay trao cho anh</h3>
                         <div class="member-time">Released of year: 2019</div>
@@ -201,7 +201,7 @@
             <h2 class="section-heading">OTHER PRODUCTS</h2>
             <div class="row member-list">
                 <div class="col col-third">
-                    <img src="../image/other_act_book.png" alt="other_product" class="member-img">
+                    <img src="image/other_act_book.png" alt="other_product" class="member-img">
                     <div class="member-content">
                         <h3 class="member-heading">Cham Toi Giac Mo</h3>
                         <div class="member-time">Released of year: 2017</div>
